test/Fail/Issue5705.err
Issue5705.agda:5.15-37: error: [UnequalSorts]
Set₉₂₂₃₃₇₂₀₃₆₈₅₄₇₇₅₈₀₉ != Set₁
when checking that the expression Set₉₂₂₃₃₇₂₀₃₆₈₅₄₇₇₅₈₀₈ has type
Set₁
